# voicesportstat

./: APPLICATION_SNAPSHOT.md  README.md  plan.md
.cursor/rules/: client-app.mdc
backend/: .gitignore  ENVIRONMENT_SETUP.md  PROJECT_STRUCTURE.md  README.md  TRANSCRIPTION_STRATEGY.md  main.py  pyproject.toml  restructure-plan.md  run_server.py  setup.bat  setup.sh  test_audio_conversion.py  test_whisper.py  uv.md
backend/app/: config.py
backend/app/models/: __init__.py  audio.py  responses.py
backend/app/routes/: __init__.py  audio.py  health.py  transcriptions.py
backend/app/services/: __init__.py  audio_service.py  azure_blob_service.py  file_conversion_service.py  file_service.py  transcription_service.py
client/: package.json  pnpm-lock.yaml  vite.config.ts
client/src/lib/: index.ts
client/src/lib/MediaRecorder/: AudioRecorder.svelte  MediaRecorder.ts  PERMISSION_STORAGE.md  PermissionStorage.test.ts  PermissionStorage.ts  README.md  example-usage.ts
client/src/lib/components/: BatchTranscriptions.svelte  ConnectionInfo.svelte  RecordingStatus.svelte
client/src/routes/: +page.svelte
infra/: .gitignore  variables.tf  versions.tf
recorder/: pyproject.toml
